--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npm install bcrypt"
   },
   "author": "Elliot Briant, Phyllis Wong, Joe Rezendez, Savan Kaur",
   "license": "MIT",
